--- a/Frontend/src/Containers/LandingPage/style.scss
+++ b/Frontend/src/Containers/LandingPage/style.scss
@@ -176,10 +176,10 @@
           left: 0px;
         }
         @media screen and (max-width: 1200px) {
-          padding: 10px 10px 20px 10px;
+          // padding: 10px 10px 20px 10px;
         }
         @media screen and (max-width: 1160px) {
-          padding: 0px 10px 0px 10px;
+          // padding: 0px 10px 0px 10px;
         }
         @media screen and (max-width: 1100px) {
           flex-direction: column;
@@ -257,7 +257,6 @@
       align-items: center;
       width: 100%;
       position: relative;
-      gap: 3px;
       // overflow-x:hidden;
       // border-radius:0% 0% 40% 40%;
       // border:1px solid blue;
@@ -280,8 +279,9 @@
         object-fit: contain;
         width: 250px;
         margin-top: 10px;
-        @media screen and (max-width: 1300px) {
+        @media screen and (max-width: 1400px) {
           width: 200px;
+          height: 75px;
         }
         @media screen and (max-width: 769px) {
           width: 150px;
@@ -317,16 +317,25 @@
           text-align: center;
           cursor: pointer;
           font-weight: 500;
+          font-size:17px;
           filter: drop-shadow(0px 0px 10px rgba(26, 170, 186, 0.3));
-
-          @media (max-width: 769px) {
+          line-height: 1.1;
+          @media (max-width: 1300px)
+          {
+            line-height: 1.2;
+            font-size: 14px;
+          }
+          @media (max-width: 1200px) {
             margin-right: 10px;
             padding: 8px 20px;
             border-radius: 25px;
             font-size: 14px;
           }
+          @media  screen and (max-width:768px){
+            line-height: 1.2;
+          }
           &:nth-child(1) {
-            padding: 8px 45px;
+            padding: 5px 45px;
             font-weight: bold;
             @media screen and (min-width: 1400px) {
               padding: 10px 70px;
@@ -354,7 +363,7 @@
           background: #1aaaba;
           color: white;
         }
-        @media (max-width: 1300px) {
+        @media screen and (min-width:1200px) and (max-width: 1300px) {
           padding: 5px 0px 25px 0px;
         }
         @media (max-width: 768px) {
@@ -489,7 +498,7 @@
     flex-direction: row;
     align-items: center;
     width: 100%;
-    margin-top: -70px;
+    margin-top: -40px;
     // background: white;
     background-image: url(../../Assets/Images/summaryBackground.png);
     background-position: top;
@@ -548,7 +557,7 @@
         }
 
         &:not(:last-child) {
-          margin-right: 50px;
+          margin-right: 30px;
           @media screen and (max-width: 1100px) {
             margin-right: 0px;
           }
@@ -621,6 +630,13 @@
       // top:58%;
       height: 320px;
       margin-top: -90px;
+    }
+    @media screen and (min-width: 1100px) and (max-width: 1250px) {
+      margin-top: -40px;
+    }
+    @media screen and (max-width: 700px)
+    {
+      margin-top:0px;
     }
   }
 
@@ -1080,8 +1096,9 @@
             font-size: 16px;
             text-align: center;
             padding: 0px 20px;
-            line-height: 24px;
-            color: rgba(88, 102, 101, 1);
+            line-height: 21px;
+            font-weight:400;
+            color: #586665;
             box-shadow: 0px 3px 3px #21d9ed;
 
             @media screen and (max-width: 1100px) {
@@ -1392,6 +1409,10 @@
       }
       .iconReview {
         background: #222a42;
+      }
+      .iconCli
+      {
+        border:none;
       }
       h5 {
         margin-top: 12px;
