--- a/Frontend/src/Containers/LandingPage/style.scss
+++ b/Frontend/src/Containers/LandingPage/style.scss
@@ -317,11 +317,10 @@
           text-align: center;
           cursor: pointer;
           font-weight: 500;
-          font-size:17px;
+          font-size: 17px;
           filter: drop-shadow(0px 0px 10px rgba(26, 170, 186, 0.3));
           line-height: 1.1;
-          @media (max-width: 1300px)
-          {
+          @media (max-width: 1300px) {
             line-height: 1.2;
             font-size: 14px;
           }
@@ -331,7 +330,7 @@
             border-radius: 25px;
             font-size: 14px;
           }
-          @media  screen and (max-width:768px){
+          @media screen and (max-width: 768px) {
             line-height: 1.2;
           }
           &:nth-child(1) {
@@ -363,7 +362,7 @@
           background: #1aaaba;
           color: white;
         }
-        @media screen and (min-width:1200px) and (max-width: 1300px) {
+        @media screen and (min-width: 1200px) and (max-width: 1300px) {
           padding: 5px 0px 25px 0px;
         }
         @media (max-width: 768px) {
@@ -634,9 +633,8 @@
     @media screen and (min-width: 1100px) and (max-width: 1250px) {
       margin-top: -40px;
     }
-    @media screen and (max-width: 700px)
-    {
-      margin-top:0px;
+    @media screen and (max-width: 700px) {
+      margin-top: 0px;
     }
   }
 
@@ -1097,7 +1095,7 @@
             text-align: center;
             padding: 0px 20px;
             line-height: 21px;
-            font-weight:400;
+            font-weight: 400;
             color: #586665;
             box-shadow: 0px 3px 3px #21d9ed;
 
@@ -1411,9 +1409,8 @@
       .iconReview {
         background: #222a42;
       }
-      .iconCli
-      {
-        border:none;
+      .iconCli {
+        border: none;
       }
       h5 {
         margin-top: 12px;
@@ -1450,7 +1447,6 @@
       @media screen and (max-width: 768px) {
         height: 320px;
         padding: 30px 10px;
-
       }
       @media screen and (max-width: 500px) {
         height: 300px;
@@ -1473,7 +1469,7 @@
     flex-direction: column;
     align-items: center;
     background: white;
-    padding: 100px 40px 30px 40px;
+    padding: 100px 40px 80px 40px;
     position: relative;
     // &::before {
     //   position: absolute;
@@ -1501,7 +1497,7 @@
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      margin-top: 20px;
+      margin-top: 45px;
       justify-content: center;
       gap: 30px;
       // flex-grow:1;
@@ -1560,7 +1556,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 80px 40px;
+    padding: 90px 40px 100px 40px;
     background: white;
     z-index: 20;
     position: relative;
