--- a/Frontend/src/Containers/LandingPage/style.scss
+++ b/Frontend/src/Containers/LandingPage/style.scss
@@ -1639,6 +1639,7 @@
       position: absolute;
       left: 0px;
       top: 0px;
+      z-index: -1;
       background-image: url(../../Assets/Images/floatingImageLarge.png),
         url(../../Assets/Images/floatingImageLarge.png),
         url(../../Assets/Images/floatingImageLarge.png),
