--- a/Frontend/src/Containers/LandingPage/style.scss
+++ b/Frontend/src/Containers/LandingPage/style.scss
@@ -617,7 +617,7 @@
     }
     @media screen and (max-width: 1100px) {
       padding: 20px 10px 0px 10px;
-      z-index: 2000;
+      // z-index: 2000;
       margin-top: 10px;
       background: white !important;
       // position:relative;
@@ -1653,5 +1653,11 @@
       opacity: 0.3;
       mix-blend-mode: multiply;
     }
+  }
+}
+
+.balancePopover .arrow {
+  &::before {
+    border-top-color: #1aaaba !important;
   }
 }
