--- a/Frontend/src/Components/Card/DetailsModal/VoteList/Vote/Vote.module.scss
+++ b/Frontend/src/Components/Card/DetailsModal/VoteList/Vote/Vote.module.scss
@@ -4,7 +4,7 @@
   padding-bottom: 5px;
   margin-top: -15px;
   cursor: pointer;
-
+  padding: 12px !important;
   // border-bottom: 1px solid rgba(38, 38, 38, 0.1);
 }
 
