--- a/Frontend/src/Components/UI/DetailsModal/DetailsTable/DetailsTable.module.css
+++ b/Frontend/src/Components/UI/DetailsModal/DetailsTable/DetailsTable.module.css
@@ -4,7 +4,7 @@
 }
 
 .tableHeader {
-  background: #1aaaba !important;
+  background: #27AAB9 !important;
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
