--- a/Frontend/src/Containers/Dashboard/Dashboard.module.scss
+++ b/Frontend/src/Containers/Dashboard/Dashboard.module.scss
@@ -1,6 +1,6 @@
 .infoCardContainer {
-  padding-left: 7px !important;
-  padding-right: 7px !important;
+  // padding-left: 7px !important;
+  // padding-right: 7px !important;
   // height: 50px;
 }
 
@@ -25,6 +25,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border: solid 1px #27aab9;
 
   @media screen and (max-width: 1100px) {
     flex-direction: column;
