--- a/Frontend/src/Components/Card/ProgressReportList/ProgressReport/Proposal.module.scss
+++ b/Frontend/src/Components/Card/ProgressReportList/ProgressReport/Proposal.module.scss
@@ -4,7 +4,7 @@
   padding-bottom: 5px;
   margin-top: -15px;
   cursor: pointer;
-  padding: 12px !important;
+  // padding: 12px !important;
 }
 
 .proposalInfo {
