--- a/Frontend/src/Components/Card/ProposalList/Proposal/Proposal.module.scss
+++ b/Frontend/src/Components/Card/ProposalList/Proposal/Proposal.module.scss
@@ -175,7 +175,7 @@
 }
 
 .createProposalButton {
-  font-size: 0.95rem !important;
+  font-size: 0.8rem !important;
   padding-top: 1px !important;
   padding-bottom: 1px !important;
   padding-left: 5px !important;
@@ -185,6 +185,6 @@
 @media screen and (min-width: 992px) {
   .createProgressReportButtonContainer {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
   }
 }
