Fix #32: Refresh button in stats page

--- a/Frontend/src/Components/StatsCard/StatsCard.module.scss
+++ b/Frontend/src/Components/StatsCard/StatsCard.module.scss
@@ -1,15 +1,25 @@
-.cardBody{
-    padding: 10px;
+.cardBody {
+  padding: 10px;
 }
 
-.proposalCard{
-    margin-top: 16px;
+.proposalCard {
+  margin-top: 16px;
 }
 
-.platformStats{
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    font-size: x-large;
-    height: 120px;
+.platformStats {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  font-size: x-large;
+  height: 120px;
+}
+
+.statsTab {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.refreshButton {
+  margin-bottom: 20px;
 }
