--- a/Frontend/src/Assets/Styles/App.scss
+++ b/Frontend/src/Assets/Styles/App.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import '../../Theme/variables.css';
 
 .slick-slide {
   div {
@@ -59,7 +60,7 @@
 }
 
 $theme-colors: (
-  'info': #27AAB9,
+  'info': #27aab9,
   'information': #17a2b8,
   'completed': #0f626b,
 );
@@ -72,7 +73,7 @@ $theme-colors: (
 
 @import '~bootstrap/scss/bootstrap';
 
-$sidebar-bg-color: #27AAB9;
+$sidebar-bg-color: var(--sidebar-color);
 $submenu-bg-color: rgba(255, 255, 255, 0.05);
 $submenu-bg-color-collapsed: rgba(29, 29, 29, 0.95);
 $sidebar-color: #ffffff;
@@ -87,10 +88,7 @@ body {
   height: 100vh;
   color: #353535;
   font-family: 'Montserrat', sans-serif;
-  background: linear-gradient(0deg,
-      rgba(38, 38, 38, 0.05),
-      rgba(38, 38, 38, 0.05)),
-    #ffffff;
+  background: var(--bg-color-1);
 }
 
 #root {
@@ -162,10 +160,7 @@ body {
   }
 
   main {
-    background: linear-gradient(0deg,
-        rgba(38, 38, 38, 0.05),
-        rgba(38, 38, 38, 0.05)),
-      #ffffff;
+    background: var(--bg-color-1);
     font-family: Montserrat;
     // padding: 24px;
     flex-grow: 1;
@@ -214,7 +209,7 @@ body {
     font-size: 14px;
     color: #545454;
 
-    >span {
+    > span {
       margin-left: 10px;
     }
   }
@@ -232,7 +227,7 @@ body {
     .block {
       direction: rtl;
 
-      >span {
+      > span {
         margin-left: 0;
         margin-right: 10px;
       }
@@ -320,7 +315,7 @@ $col-1half: $col-base-size * 1.5;
   }
 }
 
-.pro-sidebar-header>div {
+.pro-sidebar-header > div {
   display: flex !important;
   justify-content: space-between !important;
   align-items: center !important;
