--- a/Frontend/src/Components/MyProposalCard/ProposalCard.module.scss
+++ b/Frontend/src/Components/MyProposalCard/ProposalCard.module.scss
@@ -1,3 +1,4 @@
+@import '../../Theme/variables.css';
 .proposalCard {
   margin-top: 10px;
 }
@@ -7,6 +8,11 @@
     padding-left: 10px !important;
     padding-right: 10px !important;
   }
+}
+
+.cardBody {
+  background-color: var(--proposal-card-color);
+  color: var(--proposal-text-color);
 }
 
 .myProposalHeading {
