--- a/Frontend/src/Components/UI/LowerCardList/Budget/Budget.module.scss
+++ b/Frontend/src/Components/UI/LowerCardList/Budget/Budget.module.scss
@@ -1,15 +1,16 @@
+@import '../../../../Theme/variables.css';
 .proposalContainer {
   align-items: center;
   padding-top: 5px;
   padding-bottom: 5px;
-  border-bottom: 1px solid rgba(38, 38, 38, 0.1);
+  border-bottom: 1px solid var(--proposal-text-color-3);
 }
 
 .proposalInfo {
   font-weight: normal;
   font-size: 9px;
   line-height: 15px;
-  color: rgba(38, 38, 38, 0.6);
+  color: var(--proposal-text-color-2);
 }
 
 .budget {
@@ -17,7 +18,7 @@
   font-weight: 600;
   margin-left: 15px;
   line-height: 15px;
-  color: rgba(38, 38, 38, 0.85);
+  color: var(--proposal-text-color-3);
 }
 
 .info {
