--- a/Frontend/src/Components/UI/LowerCardList/LowerCardTitle/LowerCardTitle.module.scss
+++ b/Frontend/src/Components/UI/LowerCardList/LowerCardTitle/LowerCardTitle.module.scss
@@ -1,3 +1,4 @@
+@import '../../../../Theme/variables.css';
 .proposalTitle {
   font-style: normal;
   font-weight: 600;
@@ -7,5 +8,5 @@
   word-wrap: break-word;
   /* identical to box height */
 
-  color: #262626;
+  color: var(--proposal-text-color);
 }
