--- a/Frontend/src/Components/UI/LowerCardNavBar/NavBarTitle/NavBarTitle.module.scss
+++ b/Frontend/src/Components/UI/LowerCardNavBar/NavBarTitle/NavBarTitle.module.scss
@@ -1,3 +1,4 @@
+@import '../../../../Theme/variables.css';
 .navTitle {
   font-weight: normal;
   font-size: 0.95rem !important;
@@ -8,10 +9,14 @@
   text-align: center;
   // margin-left: 20px;
 
-  color: rgba(38, 38, 38, 0.9);
+  color: var(--proposal-nav-color);
+}
+
+.navTitle:hover {
+  color: var(--proposal-nav-hover-color);
 }
 
 .selectedNav {
-  color: #27AAB9;
+  color: #27aab9;
   font-weight: bold;
 }
