--- a/Frontend/src/Containers/LandingPage/style.scss
+++ b/Frontend/src/Containers/LandingPage/style.scss
@@ -1,3 +1,4 @@
+@import '../../Theme/variables.css';
 * {
   margin: 0px;
   padding: 0px;
@@ -23,7 +24,7 @@
   width: 100%;
   margin: 0px;
   padding: 10px 0px 0px 0px;
-  background-color: #1aaaba;
+  background-color: var(--topbar-landing-color);
   z-index: 10000;
   .navbarContainer {
     @media screen and (min-width: 1101px) {
@@ -237,6 +238,7 @@
     align-items: center;
     width: 100%;
     z-index: 400;
+    background-color: var(--background-color);
     // overflow: hidden;
     // height:75%;
     background: transparent;
