--- a/Frontend/src/Components/UI/ProgressBar/ProgressBar.module.scss
+++ b/Frontend/src/Components/UI/ProgressBar/ProgressBar.module.scss
@@ -3,4 +3,8 @@
   width: 100%;
   max-width: 250px;
   border: 0.5px solid darkgrey;
+
+  :first-child {
+    background-color: var(--progress-color) !important;
+  }
 }
