--- a/Frontend/src/Components/Card/DetailsModal/VoteList/Vote/Vote.module.scss
+++ b/Frontend/src/Components/Card/DetailsModal/VoteList/Vote/Vote.module.scss
@@ -111,6 +111,7 @@
   flex-wrap: wrap !important;
   margin: calc(-1 * var(--gap)) 0 0 calc(-1 * var(--gap)) !important;
   width: calc(100% + var(--gap)) !important;
+  color: var(--card-comment-color);
   // margin-top: -20px;
 }
 
