--- a/Frontend/src/Components/StatsCard/StatsCard.module.scss
+++ b/Frontend/src/Components/StatsCard/StatsCard.module.scss
@@ -1,5 +1,14 @@
 .cardBody {
   padding: 10px;
+  background-color: var(--proposal-card-color);
+}
+
+.validatorTable {
+  color: var(--proposal-text-color) !important;
+
+  :hover {
+    color: var(--proposal-text-color) !important;
+  }
 }
 
 .proposalCard {
