--- a/Frontend/src/Components/UI/DetailsModal/Address/Address.module.css
+++ b/Frontend/src/Components/UI/DetailsModal/Address/Address.module.css
@@ -3,5 +3,5 @@
   font-weight: normal;
   font-size: 12px;
   line-height: 15px;
-  color: rgba(38, 38, 38, 0.6);
+  color: var(--proposal-text-color);
 }
