--- a/Frontend/src/Containers/ProposalCreationPage/ProposalCreationPage.module.css
+++ b/Frontend/src/Containers/ProposalCreationPage/ProposalCreationPage.module.css
@@ -34,6 +34,7 @@
   padding-top: 20px;
   padding-left: 15px;
   padding-right: 15px;
+  background-color: var(--proposal-card-color) !important;
 }
 
 .card input,
@@ -47,7 +48,7 @@
   font-weight: 600;
   font-size: 0.85rem;
   line-height: 17px;
-  color: #262626;
+  color: var(--proposal-text-color);
 }
 
 @media (min-width: 768px) {
