--- a/Frontend/src/Components/VotingCardInPage/ProposalCard.module.scss
+++ b/Frontend/src/Components/VotingCardInPage/ProposalCard.module.scss
@@ -6,3 +6,7 @@
   background-color: var(--proposal-card-color);
   color: var(--proposal-text-color);
 }
+
+.card {
+  border: var(--proposal-card-border) !important;
+}
