--- a/Frontend/src/Theme/variables.css
+++ b/Frontend/src/Theme/variables.css
@@ -28,6 +28,9 @@
   --proposal-text-color-2: rgba(38, 38, 38, 0.6);
   --proposal-text-color-3: rgba(38, 38, 38, 0.85);
   --proposal-header-text-color: #262626;
+  --proposal-card-border: 1px solid rgba(0, 0, 0, 0.125);
+  --vote-card-btn-color: #e2e6ea;
+  --vote-card-text-color: #212529;
 
   --proposal-nav-color: rgba(38, 38, 38, 0.9);
   --proposal-nav-hover-color: rgba(38, 38, 38, 0.9);
@@ -76,6 +79,9 @@
   --proposal-text-color-2: #d2d2d2;
   --proposal-text-color-3: #d2d2d2;
   --proposal-header-text-color: #fff;
+  --proposal-card-border: none;
+  --vote-card-btn-color: #2b2b2d;
+  --vote-card-text-color: white;
 
   --proposal-nav-color: #8c8b92;
   --proposal-nav-hover-color: white;
