--- a/Frontend/src/Theme/variables.css
+++ b/Frontend/src/Theme/variables.css
@@ -52,7 +52,7 @@
   --heading-clor-1: #07292d;
   --link-color: #007bff;
 
-  --topbar-landing-color: #1aaaba;
+  --topbar-landing-color: white;
 }
 
 /* 2 */
