--- a/Frontend/src/Containers/LandingPage/style.scss
+++ b/Frontend/src/Containers/LandingPage/style.scss
@@ -100,7 +100,7 @@
         li {
           flex: auto;
           padding: 10px 15px 20px 15px;
-          color: black;
+          color: var(--landing-text-color);
           font-size: 14px;
           font-weight: 600;
           position: relative;
@@ -157,7 +157,7 @@
         li {
           flex: auto;
           padding: 0px 15px 0px 0px;
-          color: black;
+          color: var(--landing-text-color);
           font-size: 14px;
           font-weight: 600;
           position: relative;
@@ -231,6 +231,7 @@
   height: 100vh;
   flex-direction: column;
   background: white !important;
+
   .landingPage__Description {
     display: flex;
     flex-direction: column;
@@ -242,9 +243,17 @@
     z-index: 400;
     // background-color: var(--background-color);
 
-    background: radial-gradient(108.37% 310.61% at 16.53% 26.7%, rgba(33, 33, 79, 0.3) 4.48%, rgba(30, 182, 191, 0.3) 38.5%, rgba(30, 182, 191, 0.3) 70.59%, rgba(33, 33, 79, 0.3) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, linear-gradient(180deg, #3F4058 0%, #177FFB 100%);
+    background:  var(--landing-gradient-bg);
     // overflow: hidden;
     // height:75%;
+
+    .landingPage__Background{
+      width: 100%;
+     
+      background: url(../../Assets/Images/landingBg2.png);
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+    }
 
     margin-top: 0px;
     @media screen and (max-width: 768px) {
@@ -321,7 +330,7 @@
           margin-right: 20px;
           padding: 8px 40px;
           border-radius: 25px;
-          color: #1aaaba;
+          color: white;
           text-align: center;
           cursor: pointer;
           font-weight: 500;
@@ -352,7 +361,7 @@
             }
           }
           &:nth-child(2) {
-            border: 2px solid #1aaaba;
+            border: 2px solid white;
             font-weight: 500;
             padding: 8px 60px;
             @media screen and (min-width: 1400px) {
@@ -367,8 +376,8 @@
           }
         }
         p.active {
-          background: #1aaaba;
-          color: white;
+          background: white;
+          color: black;
         }
         @media screen and (min-width: 1200px) and (max-width: 1300px) {
           padding: 5px 0px 25px 0px;
@@ -382,77 +391,8 @@
         align-items: center;
         padding: 5px;
       }
-      &::before {
-        content: '';
-        position: absolute;
-        left: 0px;
-        top: 0px;
-        background-image: url(../../Assets/Images/floatingImageLarge.png),
-          url(../../Assets/Images/floatingImageLarge.png),
-          url(../../Assets/Images/floatingImageLarge.png),
-          url(../../Assets/Images/floatingImageLarge.png);
-        background-size: 100px 100px, 50px 50px, 80px 80px, 120px 120px;
-        background-position: top 30% left 25%, top 50% right 32%,
-          bottom 30px right 25%, bottom 50px left 20%;
-        background-repeat: no-repeat;
-        width: 100%;
-        height: 100%;
-        opacity: 0.3;
-        mix-blend-mode: multiply;
-      }
     }
-    // &::before {
-    //   content: '';
-    //   position: absolute;
-    //   left: 0px;
-    //   top: 0px;
-    //   background-image: url(../../Assets/Images/launchCurveLeft.png);
-    //   background-size: 200px 120%;
-    //   background-position: top;
-    //   height: 120%;
-    //   width: 200px;
-    //   // overflow-x:hidden;
-    //   background-repeat: no-repeat;
-    //   // transform:scaleX(1.8);
-    //   z-index: -10;
-    //   @media screen and (max-width: 768px) {
-    //     width: 100px;
-    //     background-size: contain;
-    //     top: -100px;
-    //   }
-    //   @media screen and (max-width: 500px) {
-    //     width: 100px;
-    //     background-size: contain;
-    //   }
-    // }
-    // &::after {
-    //   content: '';
-    //   position: absolute;
-    //   right: 0px;
-    //   top: 0px;
-    //   background-image: url(../../Assets/Images/launchCurveRight.png);
-    //   background-size: 200px 120%;
-    //   background-position: top;
-    //   height: 120%;
-    //   width: 200px;
-    //   overflow: hidden;
-    //   background-repeat: no-repeat;
-    //   // transform:scaleX(1.8);
-    //   z-index: -10;
-
-    //   // z-index:-100;
-    //   //  background-position: right -40px top 0px;
-    //   background-repeat: no-repeat;
-    //   @media screen and (max-width: 768px) {
-    //     // transform:scaleX(1.5);
-    //     width: 100px;
-    //     background-size: contain;
-    //     top: -100px;
-    //   }
-    //   @media screen and (max-width: 500px) {
-    //     width: 100px;
-    //   }
-    // }
+  
     @media screen and (max-width: 767px) {
       display: flex;
       min-height: 100%;
@@ -508,12 +448,13 @@
     margin-top: -40px;
     // background: white;
     // background-image: url(../../Assets/Images/summaryBackground.png);
-    background-position: top;
+   
+    // background-position: top;
     background-size: 100% 100%;
     background-repeat: no-repeat;
     height: 300px;
     filter: drop-shadow(0px 0px 6px rgba(26, 170, 186, 0.3));
-    & > .description {
+    & .description {
       display: flex;
       justify-content: center;
       flex-direction: row;
@@ -522,6 +463,7 @@
       max-width: 1500px;
       align-items: center;
       height: 100%;
+     
       div {
         // position: relative;
         border-radius: 50%;
@@ -539,7 +481,7 @@
         // margin-top: 50px;
         p {
           margin: 0px 0px 2px 0px;
-          color: rgba(7, 41, 45, 1);
+          color: var(--landing-heading-text-color);
         }
         p:nth-child(1) {
           font-size: 40px;
@@ -662,7 +604,9 @@
     // margin-top: -30px;
     // width: 100%;
     // // height:100%;
-    margin-top: 63px;
+    padding-top: 63px;
+    background-color: var(--landing-bg) !important;
+   
 
     .buildOnContainer {
       // display: flex;
@@ -682,7 +626,7 @@
 
       h1 {
         text-align: center;
-        color: rgba(7, 41, 45, 1);
+        color: var(--landing-heading-text-color);
         font-weight: bold;
         font-size: 40px;
         line-height: 40px;
@@ -697,7 +641,7 @@
         text-align: center;
         font-size: 16px;
         font-weight: 400;
-        color: rgba(88, 102, 101, 1);
+        color: var(--landing-heading-text-color);
         line-height: 19.5px;
         max-width: 1000px;
         margin: 28px auto 0px auto;
@@ -740,7 +684,7 @@
           }
           p {
             margin-top: 10px;
-            color: rgba(88, 102, 101, 1);
+            color: var(--landing-heading-text-color);
             font-weight: bold;
             font-size: 16px;
             line-height: 20px;
@@ -888,7 +832,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: white;
+    background-color: var(--landing-bg);
     position: relative;
     padding: 120px 0px 30px 0px;
     // background-image: url(../../Assets/Images/grantProcessBackground.png);
@@ -907,7 +851,7 @@
         text-decoration: none;
       }
       & > h1 {
-        color: rgba(7, 41, 45, 1);
+        color: var(--landing-heading-text-color);
         font-weight: bold;
         font-size: 40px;
         @media screen and (min-width: 769px) and (max-width: 1280px) {
@@ -921,7 +865,7 @@
         text-align: center;
         font-size: 16px;
         font-weight: 500;
-        color: rgba(88, 102, 101, 1);
+        color: var(--landing-heading-text-color);
         margin-top: 5px;
         line-height: 24px;
         @media screen and (max-width: 768px) {
@@ -942,6 +886,7 @@
         margin: 30px 20px 0px 20px;
         flex: 1;
         padding-top: 50px;
+        color: var(--landing-paragraph-text-color);
 
         p{
           min-height: 120px;
@@ -954,7 +899,7 @@
         padding-top: 50px;
         padding-bottom: 30px;
         flex: 1;
-        background: radial-gradient(146.09% 146.09% at 44.41% 118.51%, rgba(42, 33, 79, 0.7) 0%, rgba(23, 127, 251, 0.7) 48.23%, rgba(30, 182, 191, 0.7) 100%) , rgba(33, 33, 79, 0.5);
+        background: var(--landing-gradient-process);
         border-radius: 10px;
       
         ul {
@@ -1031,7 +976,7 @@
             }
           }
           & > p {
-            color: rgba(88, 102, 101, 1);
+            color: var(--landing-heading-text-color);
             font-size: 16px;
             font-weight: 500;
             line-height: 24px;
@@ -1042,7 +987,7 @@
           .decision {
             display: flex;
             flex-direction: row;
-            color: rgba(88, 102, 101, 1);
+            color: var(--landing-heading-text-color);
             font-size: 16px;
             font-weight: 500;
             p {
@@ -1069,7 +1014,7 @@
   &__GrantTimeline {
     position: relative;
     padding: 100px 0px 40px 0px;
-    background: white;
+    background-color: var(--landing-bg);
     .grantTimelineContainer {
       // max-width: 1100px;
       // margin: 0 auto;
@@ -1084,7 +1029,7 @@
         gap: 12px;
 
         & > h1 {
-          color: rgba(7, 41, 45, 1);
+          color: var(--landing-heading-text-color);
           font-weight: bold;
           font-size: 40px;
           line-height: 40px;
@@ -1113,7 +1058,7 @@
           }
        
           // min-width: 240px;
-          background: radial-gradient(146.09% 146.09% at 44.41% 118.51%, rgba(33, 33, 79, 0.7) 0%, rgba(23, 127, 251, 0.7) 48.23%, rgba(30, 182, 191, 0.7) 100%), rgba(33, 33, 79, 0.5);
+          background: var(--landing-gradient-process);
           border: 1px solid rgba(13, 107, 193, 0.5);
          
         }
@@ -1125,7 +1070,7 @@
         font-size: 18px;
         font-weight: 500;
         margin-top: 50px;
-        color: rgba(88, 102, 101, 1);
+        color: var(--landing-heading-text-color);
         @media screen and (max-width: 768px) {
           margin-top: 0px;
           font-size: 14px;
@@ -1142,7 +1087,7 @@
           font-weight: bold;
           font-size: 20px;
           line-height: 24px;
-          color: rgba(88, 102, 101, 1);
+          color: var(--landing-heading-text-color);
           @media screen and (max-width: 768px) {
             font-size: 16px;
           }
@@ -1196,7 +1141,7 @@
         margin-top: 50px;
         width: 100%;
         // margin: 50px 0px 0px 50px;
-        background: radial-gradient(146.09% 146.09% at 44.41% 118.51%, rgba(33, 33, 79, 0.7) 0%, rgba(23, 127, 251, 0.7) 48.23%, rgba(30, 182, 191, 0.7) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, rgba(33, 33, 79, 0.5);
+        background:var(--landing-gradient-description);
        
         
         .descriptionItem {
@@ -1213,8 +1158,8 @@
 
           & > div {
             border-radius: 50%;
-            background-color: white;
-            color: #0D6BC1 !important;
+            background-color: var(--landing-bg);
+            color: var(--landing-descitem-text-color) !important;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -1378,7 +1323,7 @@
     align-items: center;
     position: relative;
     padding: 38px 70px 120px 70px;
-    background: radial-gradient(146.09% 146.09% at 44.41% 118.51%, rgba(33, 33, 79, 0.7) 0%, rgba(23, 127, 251, 0.7) 48.23%, rgba(30, 182, 191, 0.7) 100%) , rgba(33, 33, 79, 0.5);
+    background:var(--landing-gradient-description);
     // background-image: url(../../Assets/Images/faqBackground.png);
     background-position: top;
     width: 100%;
@@ -1476,9 +1421,9 @@
     overflow: hidden;
     // align-items: center;
     position: relative;
-    padding: 70px 70px 80px 70px;
+    padding: 70px 0px 80px 0px;
     width: 100%;
-    background: white;
+    background-color: var(--landing-bg);
     // background-image: url(../../Assets/Images/receipentBackground.png);
     // background-position: top;
     // background-size: 100% 100%;
@@ -1495,7 +1440,7 @@
     //   border-radius: 50%;
     // }
     & > h1 {
-      color: rgba(7, 41, 45, 1);
+      color: var(--landing-heading-text-color);
       font-weight: bold;
       font-size: 40px;
       text-align: center;
@@ -1521,7 +1466,7 @@
     }
 
     .receipentCard {
-      background: white;
+      background-color: var(--landing-bg);
       border-radius: 30px;
       padding: 30px 20px;
       height: 320px;
@@ -1561,7 +1506,7 @@
         font-size: 16px;
         line-height: 20px;
         font-weight: bold;
-        color: black;
+        color:var(--landing-text-color);
       }
       p {
         display: -webkit-box;
@@ -1571,7 +1516,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         line-height: 24px;
-        color: rgba(88, 102, 101, 1);
+        color: var(--landing-heading-text-color);
         @media screen and (max-width: 768px) {
           font-size: 14px;
         }
@@ -1612,7 +1557,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: white;
+    background-color: var(--landing-bg);
     padding: 100px 40px 80px 40px;
     position: relative;
     // &::before {
@@ -1626,7 +1571,7 @@
     //   border-radius: 50%;
     // }
     h1 {
-      color: rgba(7, 41, 45, 1);
+      color: var(--landing-heading-text-color);
       font-size: 40px;
       line-height: 40px;
       font-weight: 700;
@@ -1701,11 +1646,11 @@
     flex-direction: column;
     align-items: center;
     padding: 90px 40px 100px 40px;
-    background: white;
+    background-color: var(--landing-bg);
     z-index: 20;
     position: relative;
     h1 {
-      color: rgba(7, 41, 45, 1);
+      color: var(--landing-heading-text-color);
       font-size: 40px;
       font-weight: 700;
       line-height: 40px;
@@ -1754,7 +1699,7 @@
           }
           p {
             font-size: 16px;
-            color: black;
+            color: var(--landing-text-color);
             font-weight: 700;
             text-align: center;
             line-height: 24px;
