--- a/Frontend/src/Theme/darkMode.css
+++ b/Frontend/src/Theme/darkMode.css
@@ -78,7 +78,7 @@ input:checked + .slider {
 }
 
 .themeText {
-  color: black;
+  color: var(--landing-text-color);
   font-size: 14px;
   font-weight: 600;
 }
