--- a/Frontend/src/Theme/variables.css
+++ b/Frontend/src/Theme/variables.css
@@ -16,6 +16,7 @@
   --topbar-home-color: white;
   --footer-bg-color: rgba(38, 38, 38, 0.1);
   --console-color: #262626;
+  --console-bg-color: white;
   --card-title-text-color: #262626;
   --card-highlight-color: rgba(237, 237, 237, 0.4);
   --card-comment-color: #545454;
@@ -77,6 +78,7 @@
   --topbar-home-color: #2b2b2d;
   --footer-bg-color: #393939;
   --console-color: #c2c2c2;
+  --console-bg-color: #242425;
   --card-title-text-color: #8c8b92;
   --card-highlight-color: rgba(12, 12, 12, 0.4);
   --card-comment-color: #9e9d9d;
