--- a/Frontend/src/Containers/LandingPage/style.scss
+++ b/Frontend/src/Containers/LandingPage/style.scss
@@ -1084,7 +1084,7 @@
         flex-direction: column;
         align-items: center;
         width: 100%;
-        color: #586665;
+        color: #e9ecef;
         margin-top: 50px;
         & > h6 {
           font-weight: bold;
