--- a/Frontend/src/Components/Header/UserInfoFormModal/UserInfoFormModal.module.scss
+++ b/Frontend/src/Components/Header/UserInfoFormModal/UserInfoFormModal.module.scss
@@ -19,15 +19,11 @@
   padding-right: 15px;
 }
 
+
 // .modal-content {
 //   background-color: #000;
 //   color: #fff;
 // }
-
-.modalBody {
-  background-color: black !important;
-  color: white !important;
-}
 
 
 // .modalBody label,
@@ -77,7 +73,7 @@
 }
 
 .address {
-  font-size: 0.9rem;
+  font-size: 1rem;
   word-wrap: break-word;
 }
 
@@ -90,5 +86,16 @@
 
 .modal-content{
   background-color: var(--proposal-card-color) !important;
-  color: white !important;   
+  color: var(--font-color) !important;   
 }
+
+.textColor{
+  color: var(--font-color)!important;
+  // color: white !important;
+}
+
+.inputBox{
+  background-color: var(--proposal-card-color) !important;
+  color: var(--font-color) !important ;
+  border:  1px solid rgb(66, 66, 66) !important;
+} 
