--- a/Frontend/src/Containers/ProgressReportCreationPage/ProposalCreationPage.module.css
+++ b/Frontend/src/Containers/ProgressReportCreationPage/ProposalCreationPage.module.css
@@ -80,9 +80,9 @@
   padding-right: 0px;
 }
 
-.card label:nth-child(2) {
+/* .card label:nth-child(2) {
   color: red !important;
-}
+} */
 
 .card > form > div {
   align-items: center;
@@ -113,3 +113,15 @@
   z-index: -1000;
 }
 
+
+
+.inputBox{
+  background-color: var(--proposal-card-color) !important;
+  color: var(--font-color) !important ;
+  border:  1px solid rgb(66, 66, 66) !important;
+} 
+
+.textColor{
+  color: var(--font-color) !important;
+
+}
