submit proposal fix milestone display improved layout of detail page imrpoved voting card of milestone updated fixed other some ui changes

--- a/Frontend/src/Components/StatsCard/StatsCard.module.scss
+++ b/Frontend/src/Components/StatsCard/StatsCard.module.scss
@@ -19,8 +19,9 @@
   align-items: center;
   justify-content: center;
   display: flex;
+  color: var(--font-color);
   font-size: x-large;
-  height: 120px;
+  min-height: 40vh;
 }
 
 .statsTab {
