fix: show no vote error for preps only

--- a/Frontend/src/Components/MilestoneCard/MilestoneTest.module.scss
+++ b/Frontend/src/Components/MilestoneCard/MilestoneTest.module.scss
@@ -57,7 +57,7 @@ border-right: 0.75px solid #525252;
   display: flex;
   gap: 12px;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   width: 100%;
 }
 .tabContainer {
